Changes in Rcgmin

Changes before 2012-4-30 not recorded 

TODOS
   o    Eventually include different line searches, possibly in a
        separate routine

2012-8-08

   o    Minor edits and addition of references.

2012-6-09

   o    User-tolerance for gradient size.

2012-5-21
   o	Separation of constrained and unconstrained versions.
